--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ Temporary Items
 
 ## User settings
 xcuserdata/
+*.xcuserstate
+
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
