--- a/Simplify Golf/GoogleService-Info.plist
+++ b/Simplify Golf/GoogleService-Info.plist
@@ -7,7 +7,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.407781123853-4d2j92amut5bflvf4ou5qkq2cqja4vcu</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBHTiD9zVkdOM05FiX6ZQfCk6HR3nvcMNs</string>
+	<string>AIzaSyDKaa7C7Qi2m_j60vhLhCV0d3s9yji7eSU</string>
 	<key>GCM_SENDER_ID</key>
 	<string>407781123853</string>
 	<key>PLIST_VERSION</key>
@@ -19,15 +19,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>simplify-golf.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:407781123853:ios:feb83d3eb5498d39cef244</string>
 </dict>
